# tauri-plugin-webdriver

./: Cargo.toml  README.md  build.rs  package.json
.github/workflows/: checks.yml  e2e.yml  publish.yml
android/: build.gradle.kts
android/src/main/java/: Example.kt  ExamplePlugin.kt  WebDriverPlugin.kt
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/e2e/: wdio.conf.ts
examples/tauri-app/e2e/helpers/: app-launcher.ts  test-utils.ts
examples/tauri-app/e2e/specs/: actions.spec.ts  alerts.spec.ts  cookies.spec.ts  elements.spec.ts  frames.spec.ts  navigation.spec.ts  print.spec.ts  screenshots.spec.ts  scripts.spec.ts  shadow-dom.spec.ts  window.spec.ts
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: WebDriverPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: async_script.rs  commands.rs  desktop.rs  lib.rs  mobile.rs
src/platform/: alert_state.rs  android.rs  executor.rs  ios.rs  linux.rs  macos.rs  macos_handler.rs  mod.rs  windows.rs
src/server/: mod.rs  response.rs  router.rs
src/server/handlers/: actions.rs  alert.rs  cookie.rs  document.rs  element.rs  frame.rs  mod.rs  navigation.rs  print.rs  screenshot.rs  script.rs  session.rs  shadow.rs  timeouts.rs  window.rs
src/webdriver/: element.rs  locator.rs  mod.rs  session.rs
