[package]
name = "tauri-plugin-webdriver"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-webdriver"

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "net"] }
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tracing = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSData", "NSURL", "NSError"] }
objc2-app-kit = { version = "0.2" }
objc2-web-kit = { version = "0.2", features = ["WKWebView", "WKWebsiteDataStore", "WKHTTPCookieStore", "block2", "objc2-app-kit"] }
block2 = "0.5"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
